[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "autoeq"
version = "2.2.0"
authors = [
  { name="Jaakko Pasanen", email="jaakko.o.pasanen@gmail.com" },
]
description = "Automatic headphone equalizer config generator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'Pillow~=9.2.0',
    'matplotlib~=3.5.2',
    'pandas~=1.4.3',
    'scipy~=1.8.1',
    'numpy~=1.23.1',
    'tabulate~=0.8.10',
    'soundfile~=0.11.0',
    'pyyaml~=6.0',
    'tqdm~=4.64.0',
]

[project.urls]
"Homepage" = "https://github.com/jaakkopasanen/AutoEq"
"Bug Tracker" = "https://github.com/jaakkopasanen/AutoEq/issues"

[tool.hatch.build]
include = [
    "/autoeq",
    "LICENCE",
    "pyproject.toml",
]
exclude = [
    "/.github",
    "/compensation",
    "/measurements",
    "/research",
    "/results",
    "/tests",
    ".gitignore",
    "/autoeq/README.md"
]
