[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "autoeq"
version = "3.0.0"
authors = [
  { name="Jaakko Pasanen", email="jaakko.o.pasanen@gmail.com" },
]
description = "Automatic headphone equalizer config generator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'Pillow~=10.0.0',
    'matplotlib~=3.7.2',
    'pandas~=2.0.3',
    'scipy~=1.11.1',
    'numpy~=1.25.1',
    'tabulate~=0.9.0',
    'soundfile~=0.12.1',
    'pyyaml~=6.0',
    'tqdm~=4.65.0',
]

[project.urls]
"Homepage" = "https://github.com/jaakkopasanen/AutoEq"
"Bug Tracker" = "https://github.com/jaakkopasanen/AutoEq/issues"

[tool.hatch.build]
include = [
    "/autoeq",
    "LICENCE",
    "pyproject.toml",
]
exclude = [
    "/.github",
    "/compensation",
    "/measurements",
    "/research",
    "/results",
    "/tests",
    ".gitignore",
    "/autoeq/README.md"
]
